--- a/www/styles/navigation.css
+++ b/www/styles/navigation.css
@@ -1,37 +1,55 @@
 nav {
-  font-size: 12px;
-  color: white;
-  margin-top: 20px;
-  margin-left: 20px;
+    font-size: 12px;
+    color: white;
+    margin-top: 20px;
+    margin-left: 20px;
 }
 
-#nav li:first-child  {
-  float:left;
-  margin-top: -3px;
-  margin-right: 6px;
+#nav li:first-child {
+    float:left;
+    margin-top: -3px;
+    margin-right: 6px;
 }
 
-#nav li:nth-child(n+2) {
-  font-family: "HeroRegular";
-  list-style: none;
-  float: left;
-  text-align: center;
-  border: 1px solid #7F7F7F;
-  background-color: #0C0B0B;
-  height: 20px;
-  width: 96px;
-  padding-top: 6px;
-  margin-left: 2px;
-  border-radius: 8px;
-  -moz-border-radius: 8px;
-  -webkit-border-radius: 8px; }
+#nav li:last-child {
+    font-family: "HeroRegular";
+    list-style: none;
+    float: right;
+    text-align: center;
+    background-color: #CCCCCC;
+    height: 20px;
+    padding-top: 6px;
+    padding-left: 6px;
+    padding-right: 5px;
+    margin-right: 5px;
+    border-radius: 8px;
+    -moz-border-radius: 8px;
+    -webkit-border-radius: 8px;
+}
+
+#nav li:nth-child(n+2):not(:last-child) {
+    font-family: "HeroRegular";
+    list-style: none;
+    float: left;
+    text-align: center;
+    border: 1px solid #7F7F7F;
+    background-color: #0C0B0B;
+    height: 20px;
+    min-width: 96px;
+    padding-top: 6px;
+    margin-left: 2px;
+    border-radius: 8px;
+    -moz-border-radius: 8px;
+    -webkit-border-radius: 8px; }
+    
+
 
 #navbar {
-  margin-top: 12px;
-  margin-left: 63px;
-  width: 596px;
-  height: 2px;
-  border: 3px;
-  background-color: #0C0B0B;
+    margin-top: 12px;
+    margin-left: 63px;
+    width: 596px;
+    height: 2px;
+    border: 3px;
+    background-color: #0C0B0B;
 
 }
