--- a/www/styles/navigation.css
+++ b/www/styles/navigation.css
@@ -1,7 +1,13 @@
+a {
+    font-size: 12px;
+    color: white;
+    text-decoration: none;
+}
+
 nav {
     font-size: 12px;
     color: white;
-    margin-top: 20px;
+    margin-top: 30px;
     margin-left: 20px;
 }
 
@@ -18,10 +24,11 @@ nav {
     text-align: center;
     background-color: #CCCCCC;
     height: 20px;
-    padding-top: 6px;
+    padding-top: 8px;
     padding-left: 6px;
     padding-right: 5px;
     margin-right: 5px;
+    margin-top: 1px;
     border-radius: 8px;
     -moz-border-radius: 8px;
     -webkit-border-radius: 8px;
@@ -36,18 +43,16 @@ nav {
     background-color: #0C0B0B;
     height: 20px;
     min-width: 96px;
-    padding-top: 6px;
+    padding-top: 8px;
     margin-left: 2px;
     border-radius: 8px;
     -moz-border-radius: 8px;
     -webkit-border-radius: 8px; }
-    
-
 
 #navbar {
-    margin-top: 12px;
-    margin-left: 63px;
-    width: 596px;
+    margin-top: 18px;
+    margin-left: 65px;
+    width: 594px;
     height: 2px;
     border: 3px;
     background-color: #0C0B0B;
