--- a/www/styles/navigation.css
+++ b/www/styles/navigation.css
@@ -20,14 +20,14 @@ nav {
 #nav li:last-child {
     font-family: "HeroRegular";
     list-style: none;
-    float: right;
+    float: left;
     text-align: center;
     background-color: #CCCCCC;
     height: 20px;
     padding-top: 8px;
     padding-left: 6px;
     padding-right: 5px;
-    margin-right: 5px;
+    margin-left: 20px;
     margin-top: 1px;
     border-radius: 8px;
     -moz-border-radius: 8px;
