--- a/www/styles/main.css
+++ b/www/styles/main.css
@@ -1,3 +1,8 @@
+p {
+    margin-top: 10px;
+    margin-left: 4px;
+}
+
 #game {
    /* UNCOMMENT TO CENTER 
     display: block;
@@ -5,3 +10,18 @@
     margin-right: auto;*/
     margin-left: 20px;
 }
+
+
+#profile {
+    font-family: "HeroRegular";
+    color: white;
+    border: 2px solid #666666;
+    background-color: #666666;
+    height: 64px;
+    width: 450px;
+    padding: 8px;
+    margin-top: 12px;
+    margin-left: 64px;
+    border-radius: 8px;
+    -moz-border-radius: 8px;
+    -webkit-border-radius: 8px; }
