Mozilla needs moz-column-count to work

--- a/www/styles/main.css
+++ b/www/styles/main.css
@@ -147,5 +147,6 @@ mark a {
     font-size: medium;
     column-width: 100px;
     -moz-column-width: 13em; 
+    -moz-column-count: 3;
     -webkit-column-width: 13em;
 }
