--- a/www/styles/main.css
+++ b/www/styles/main.css
@@ -17,8 +17,6 @@ section {
     color: white;
     border: 2px solid #666666;
     background-color: #666666;
-/*    min-height: 64px;
-    min-width: 300px;*/
     padding-left: 8px;
     padding-right: 12px;
     padding-bottom: 8px;
@@ -144,9 +142,24 @@ mark a {
 }
 
 #multicolumn {
-    font-size: medium;
+    font-family: "HeroRegular";
+    width: 658px;
+    color: white;
+        background-color: #666666;
+    border: 2px solid #666666;
+        border-radius: 8px;
+        -moz-border-radius: 8px;
+        -webkit-border-radius: 8px;
+    padding-left: 8px;
+        padding-top: 10px;
+        padding-right: 12px;
+        padding-bottom: 8px;
+    margin-top: 20px;
+            margin-left: 65px;
     column-width: 100px;
-    -moz-column-width: 13em; 
-    -moz-column-count: 3;
-    -webkit-column-width: 13em;
+        -webkit-column-width: 13em;
+        -webkit-column-count: 3;
+        -moz-column-width: 13em; 
+        -moz-column-count: 3;
+
 }
