--- a/www/styles/navigation.css
+++ b/www/styles/navigation.css
@@ -1,6 +1,11 @@
+/* MAIN NAV BAR SEMANTIC ELEMENTS */
+
 nav {
 
 }
+
+
+/* MAIN NAV BAR IDs */
 
 #nav {
     font-size: 12px;
@@ -56,6 +61,9 @@ nav {
     background-color: #0C0B0B;
 
 }
+
+
+/* UEBER NAV BAR IDs */
 
 #ueber_header {
     font-family: "HeroRegular";
