--- a/www/styles/main.css
+++ b/www/styles/main.css
@@ -12,15 +12,16 @@ input {
     }
 
 footer {
-    float: left;
+    display: block;
+    clear: both;
     text-align: center;
-    width: 790px;
+    width: 770px;
     font-family: "HeroRegular";
     font-size: 14px;
     color: black;
     background-color: #FFF;
-    margin-top: 20px;
-    margin-left: 12px;
+    padding-top: 20px;
+    margin-left: 20px;
 }
 
 mark {
