--- a/www/styles/main.css
+++ b/www/styles/main.css
@@ -126,6 +126,8 @@ input[type="submit"] {
 }
 
 #multicolumn {
+    display: block;
+    clear: both;
     font-family: "HeroRegular";
         line-height: 120%;
     width: 658px;
@@ -140,7 +142,7 @@ input[type="submit"] {
         padding-right: 12px;
         padding-bottom: 8px;
     margin-top: 15px;
-        margin-left: 0px; 
+        margin-left: 65px; 
     column-width: 100px;
         -webkit-column-width: 13em;
         -webkit-column-count: 3;
@@ -165,47 +167,27 @@ input[type="submit"] {
     margin-left: 350px;
 }
 
-#startcolumn {
-    font-family: "HeroRegular";
-        line-height: 120%;
-    width: 658px;
-    color: white;
-        background-color: #666666;
-    border: 2px solid #666666;
-        border-radius: 8px;
-        -moz-border-radius: 8px;
-        -webkit-border-radius: 8px;
-    padding-left: 8px;
-        padding-top: 10px;
-        padding-right: 12px;
-        padding-bottom: 8px;
-    margin-top: 15px;
-        margin-left: 65px; 
-    column-width: 100px;
-        -webkit-column-width: 13em;
-        -webkit-column-count: 3;
-        -moz-column-width: 13em; 
-        -moz-column-count: 3;
-} 
-
-#word_search_form {
-    font-family: "HeroRegular";
-    color: white;
-    float: left;
-    border: 2px solid #666666;
-    background-color: #666666;
-    padding-left: 8px;
-    padding-right: 10px;
-    padding-bottom: 8px;
-    margin-top: 8px;
-    border-radius: 12px;
-    -moz-border-radius: 8px;
-    -webkit-border-radius: 8px; 
-}
-
 #word_submit {
     width: 50px;
     font-family: "HeroRegular";
     background-color: #CCCCCC;
-    margin-top: 10px; 
+    margin-top: 8px;
+}
+
+#word_input {
+    font-family: "HeroRegular";
+        font-size: 14px;
+    float: left;
+    border: 2px solid #CCCCCC;
+    background-color: #FFFFFF;
+    color: #000;
+    margin-top: 8px;
+        margin-left: 4px;
+    padding-top: 6px;
+        padding-bottom: 8px;
+        padding-left: 4px;
+        padding-right: 4px;
+    border-radius: 12px;
+       -moz-border-radius: 8px;
+        -webkit-border-radius: 8px;
 }
