--- a/www/styles/main.css
+++ b/www/styles/main.css
@@ -109,19 +109,19 @@ input[type="submit"] {
     margin-left: 80px;
 }
 
-#graph_info_error {
+#graph_notfound {
+    float:left;
+    clear: left;
     font-family: "HeroRegular";
-    float: left;
-    line-height: 115%;
     margin-top: 8px;
-    margin-left: 3px;
+    margin-left: 64px;
     background-color: #000000;
     font-size: 18px;  
     color: #FFFFFF;  
     border-radius: 8px;
     -moz-border-radius: 8px;
     -webkit-border-radius: 8px;
-    padding: 9px 15px 15px 9px;  
+    padding: 9px;  
     border: 3px solid #FFFF33;
 }
 
@@ -168,6 +168,7 @@ input[type="submit"] {
 }
 
 #word_submit {
+    float: left;
     width: 50px;
     font-family: "HeroRegular";
     background-color: #CCCCCC;
@@ -185,7 +186,7 @@ input[type="submit"] {
         margin-left: 4px;
     padding-top: 6px;
         padding-bottom: 8px;
-        padding-left: 4px;
+        padding-left: 6px;
         padding-right: 4px;
     border-radius: 12px;
        -moz-border-radius: 8px;
