--- a/www/styles/main.css
+++ b/www/styles/main.css
@@ -180,6 +180,7 @@ input[type="submit"] {
 #word_input {
     font-family: "HeroRegular";
         font-size: 14px;
+    text-align: center;
     float: left;
     border: 2px solid #CCCCCC;
     background-color: #FFFFFF;
