--- a/www/styles/main.css
+++ b/www/styles/main.css
@@ -202,11 +202,17 @@ input[type="submit"] {
 
 #word_suggestions {
     display: none;
+    z-index: 1;
+    background-color: white;
     border-style: solid;
     border-width: 2px;
     position: absolute;
     top: 45px;
     left: 80px;
+}
+
+#word_suggestions .selected {
+    background-color: #CCCCCC;
 }
 
 /* CLASSES */
